syntax = "proto3";

package hello;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {} //一元RPC
  rpc SayList (HelloRequest) returns (stream HelloReply) {} //服务端流式RPC
  rpc SayRecord(stream HelloRequest) returns (HelloReply) {} //客户端流式RPC
  rpc SayRoute (stream HelloRequest) returns (stream HelloReply) {} //双向流式RPC
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
